@@ -152,13 +152,13 @@
       -Dfile.encoding=cp1252 -Dmongo.dbName=winddbTest -DspatialWind=true
     </parameters.common>
     <parameters.vm-settings>
-      -ea -Xmx1024m -XX:PermSize=256m -XX:+UseG1GC
+      -ea -Xmx1024m -XX:+UseG1GC
     </parameters.vm-settings>
     <parameters.tractrac>
       -Dtractrac.tunnel=true -Dtractrac.tunnel.host=localhost
     </parameters.tractrac>
     <parameters.mongodb>
-      -Dmongo.host=localhost
+      -Dmongo.host=127.0.0.1
     </parameters.mongodb>
     <parameters.debug>
       -Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=y
@@ -187,7 +187,7 @@
       <id>no-debug.without-proxy</id>
       <properties>
         <tycho.build.argLine>
-          ${parameters.common} ${parameters.vm-settings}
+          ${parameters.common} ${parameters.vm-settings} ${parameters.mongodb}
         </tycho.build.argLine>
       </properties>
     </profile>
@@ -195,7 +195,7 @@
       <id>debug.with-proxy</id>
       <properties>
         <tycho.build.argLine>
-          ${parameters.common} ${parameters.vm-settings} ${parameters.proxy} ${parameters.debug}
+          ${parameters.common} ${parameters.vm-settings} ${parameters.proxy} ${parameters.debug} ${parameters.mongodb}
         </tycho.build.argLine>
       </properties>
     </profile>
@@ -203,7 +203,7 @@
       <id>debug.without-proxy</id>
       <properties>
         <tycho.build.argLine>
-          ${parameters.common} ${parameters.vm-settings} ${parameters.debug}
+          ${parameters.common} ${parameters.vm-settings} ${parameters.debug} ${parameters.mongodb}
         </tycho.build.argLine>
       </properties>
     </profile>
